Update for use with Glowstone